--- a/模板.conf
+++ b/模板.conf
@@ -30,7 +30,7 @@ exclude-simple-hostnames = true
 network-framework = false
 # > DNS 服务器
 dns-server = 119.29.29.29, 223.5.5.5, 114.114.114.114, system
-encrypted-dns-server = https://east.lele233.com/cdn,quic://east.ovo.glass 
+encrypted-dns-server = https://east.lele233.com/cdn,quic://east.ovo.glass,quic://b.iqiq.io,https://cn-east.lele233.com/cdn
 read-etc-hosts = true
 # > 从 /etc/hosts 读取 DNS 记录
 loglevel = notify
