--- a/模板.conf
+++ b/模板.conf
@@ -1,59 +1,220 @@
 [General]
-# > 禁用增强版 Wi-Fi 助理
-wifi-assist = false
-# > Internet 测试 URL
-internet-test-url = http://wifi.vivo.com.cn/generate_204
-# > 代理测速 URL
+# 通用
+# Internet 测试 URL
+internet-test-url = http://captive.apple.com/generate_204
+# 代理测速 URL
 proxy-test-url = http://cp.cloudflare.com/generate_204
-# > 测试超时（秒）
-test-timeout = 2
-# > 自定义 GeoIP 数据库为https://github.com/Hackl0us/GeoIP2-CN
+
+# 测试超时（秒）:Surge 将向该 URL 发送一个 HTTP HEAD 请求。测试只关心是否收到了返回数据，并不关心数据内容。仅支持 http:// 协议
+test-timeout = 3
+# UDP 代理转发测试指定：默认向 8.8.8.8 查询 apple.com，可使用 proxy-test-udp 参数修改，如 proxy-test-udp = google.com@1.1.1.1
+# proxy-test-udp = google.com@1.1.1.1
+
+# 增强版 Wi-Fi 助理
+# Surge 会在 Wi-Fi 网络不佳时尝试使用数据网络建立连接。该功能将对所有连接生效，请仅当使用不限量的数据流量时开启。
+wifi-assist = false
+
+# 混合网络：无论 Wi-Fi 信号如何，总是尝试并发使用 Wi-Fi 和数据网络连接。开启后，等同于对所有策略设置 hybrid = true，所有 TCP 连接在建立时均会并发尝试数据网络和 WiFi 连接，也就说如果不想对所有策略启用「混合网络」可以指定目标策略使用，如：
+
+# HYBRID = direct, hybrid=true
+# 但实际上可以不用这么写，因为 Surge 新增了两个内置策略：
+# HYBRID：等价于 HYBRID = direct, hybrid=true
+# NO-HYBRID ：等价于 NO-HYBRID = direct, hybrid=off
+# 对于 DIRECT 的「混合网络」应用，可以使用直接使上述两个内置策略。
+# 至于其他策略，「混合网络」的参数说明如下：
+# hybrid=auto：默认，使用全局设置也就是使用 [General] 下的 all-hybrid 设置；
+# hybrid=on 或 hybrid=true：对该策略启动并发连接；
+# hybrid=off：即使在 All Hybrid 或 WiFi Assist 开启时，有 WiFi 就不使用数据网络；
+# 除此之外，所有 DNS 查询操作也都将并发在数据网络和 WiFi 上进行。所以若想体验该功能，请手动配置公网 DNS，暂不支持 DOH。
+# 该选项可显着改善在弱 Wi-Fi 和网络切换时的网络体验。该选项对所有 TCP 连接和 DNS 查询生效。请仅当使用不限量的数据流量套餐时开启。
+all-hybrid = true
+# 「Wi-Fi 助理」和「混合网络」的区别：
+# WiFi Assist：使用 WiFi 尝试建立连接后，如果一秒钟内仍未完成，则再使用数据网络尝试连接。选择最先完成的 TCP 连接；
+# Hybrid：直接并发建立两个 TCP 连接，选择最先完成的 TCP 连接.
+
+
+# GeoIP 数据库，默认使用surge自带.Surge 默认是使用由 MaxMind 创建的 GeoLite2 数据库，但是它的信息不是那么的准确，从 Surge iOS 4.5.0 开始可以自定义 GeoIP 数据的 URL，需要为 MaxMind 的格式。
+# 如果想使用第三方GeoIP，下面两个二选一即可，也可自行更换为其它第三方
+# 在配置信息设置好 geoip-maxmind-url 后建议在图形界面打开「自动更新」开关（或者直接在图形界面中设置 URL 及开关）
 geoip-maxmind-url = https://cdn.jsdelivr.net/gh/Hackl0us/GeoIP2-CN@release/Country.mmdb
-# > GeoIP 数据库自动更新
-disable-geoip-db-auto-update = true
-# > IPv6 支持
-ipv6 = true
-# > 允许 Wi-Fi 访问 (仅 iOS，若允许远程访问将「false」改为「true」)
+# GeoIP 禁用自动更新
+disable-geoip-db-auto-update = false
+
+# 是否启动完整的 IPv6 支持 (默认值: false)参数：true：开启，false：关闭
+ipv6 = false
+# Surge VIF IPv6 Stack
+# 允许 IPv6 通过 Surge VIF。当希望 Surge 处理连接到 IPv6 地址的原始 TCP 连接时非常有用。可选项：true，false，auto，always
+ipv6-vif = auto
+# ⚠️ 隐藏状态栏上的VPN图标，启动该选项可能导致「Cannot allocate memory」系统错误，请谨慎使用
+# hide-vpn-icon = true
+
+# Wi-Fi 访问
+# Surge 可以作为 HTTP/SOCKS5 代理服务器向 Wi-Fi 网络下的其他设备提供服务器
 allow-wifi-access = false
-wifi-access-http-port = 6152
-wifi-access-socks5-port = 6153
-# > 允许 Wi-Fi 访问 (仅 macOS，若允许远程访问将「127.0.0.1」改为「0.0.0.0」)
-http-listen = 127.0.0.1:6152
-socks5-listen = 127.0.0.1:6153
-# > 兼容模式 (仅 iOS)
-# compatibility-mode = 0
-# > 跳过代理
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn
-# > 排除简单主机名
-exclude-simple-hostnames = true
-# > Network framwork
-network-framework = false
-# > DNS 服务器
-dns-server = 119.29.29.29, 223.5.5.5, 114.114.114.114, system
-encrypted-dns-server = https://east.lele233.com/cdn,quic://east.ovo.glass,quic://b.iqiq.io,https://cn-east.lele233.com/cdn
-read-etc-hosts = true
-# > 从 /etc/hosts 读取 DNS 记录
-loglevel = notify
-# 高级设置
-# > 日志级别
-show-error-page-for-reject = true
-# > 当遇到 REJECT 策略时返回错误页
-always-real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com
-# > Always Real IP Hosts
-# 当 Surge VIF 处理 DNS 问题时，此选项要求 Surge 返回一个真正的 IP 地址，而不是一个假 IP 地址。
+# Surge Mac 供外网访问的服务端口
+# HTTP 服务端口 (默认值: 6152)
+# http-listen = 0.0.0.0:6152
+# SOCKS5 服务端口 (默认值: 6153)
+# socks5-listen = 0.0.0.0:6153
+
+# Surge iOS 供外网访问的服务端口
+# HTTP 服务端口 (默认值: 6152)
+# wifi-access-http-port = 6152
+# SOCKS5 服务端口 (默认值: 6153)
+# wifi-access-socks5-port = 6153
+
+# 远程控制器
+# 允许外部控制器访问 Surge，Surge Dashboard 或 Surge CLI 进行管理控制
+# 默认仅允许外部控制器通过 USB 进行控制。如果想要允许由 Wi-Fi 控制可以将 127.0.0.1 改为 0.0.0.0
+external-controller-access = zeaphyou@127.0.0.1:6170
+http-api = zeaphyou@127.0.0.1:6171
+# 使用HTTPS替代HTTP协议，需要先配置Mitm的CA证书，同时需要在客户端设备上手动安装并信任CA证书
+http-api-tls = false
+# 页面控制器：通过页面控制Surge， Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
+http-api-web-dashboard = true
+# 允许热点共享
+allow-hotspot-access = false
+
+# 该选项将使得发往这些域名或者 IP 段的请求由 Surge VIF 进行处理（而不是 Surge Proxy），该选项用于修正和某些应用的兼容性问题。该选项一般只用于处理某些特殊的兼容性问题，并不能使请求绕过 Surge。（对于 Surge Mac，如果未开启「增强模式」，确实可以绕过）。
+# 若要指定一个域，请输入域名。如：apple.com；
+# 若要指定域中的所有网站，请在域名前使用 *，如：*apple.com；
+# 若要指定域的特定部分，请指定完整部分。如：store.apple.com；
+# 若要通过 IP 地址指定主机或网络，请输入特定的 IP 地址（如 192.168.2.11）或地址范围（如 192.168.2.* 或 192.168.2.0/24）；
+# 注意：如果你输入一个 IP 地址或地址范围，你只能在使用该地址连接到该主机时绕过代理，而不能在通过解析到该地址的域名连接到主机时绕过代理。
+# 已加入对部分检测代理的app的跳过
+skip-proxy = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.168.0.0/16, 224.0.0.0/3, ::1/128, fc00::/7, fd00::/8, fe80::/10, ff00::/8, 2001::/32, 2001:db8::/32, 2002::/16, ::ffff:0:0:0:0/1, ::ffff:128:0:0:0/1, localhost, *.local, passenger.t3go.cn, e.crashlytics.com, captive.apple.com, app.yinxiang.com, injections.adguard.org, local.adguard.org, cable.auth.com, www.baidu.com, yunbusiness.ccb.com,*.bankcomm.com,*.ccb.com,*.boc.cn
+
+# 兼容性（仅 iOS 版可用）
+# 0：禁用
+# 1：Proxy with Loopback Address
+# 2：Proxy Only
+# 3：TUN Only
+# 4：VIF Proxy：不使用 127.0.0.1 的回环地址作为代理，使用 VIF 的虚拟代理地址，将产生额外的性能开销
+# 5：No Default Route：不声明为默认路由，但声明若干个小路由以覆盖所有地址（与 Surge Mac 增强模式行为相同）。
+# 这种配置下由于 VIF 不是主网络设备无法配置系统代理。部分应用在该模式下会认为 VPN 未开启以解决特殊兼容性问题，如 HomeKit Security Camera
+# 所有兼容模式均不推荐长期开启，仅应用作特定问题的临时解决使用。
+#####警告#######
+# ⚠️ 请仅在指引下使用，开启后部分功能可能无法使用。
+ compatibility-mode = 0
+
+# FOR MAC 
+# 当 Wi-Fi 不是首选网络时 SSID 组策略使用默认策略（仅 macOS 版可用）
+# use-default-policy-if-wifi-not-primary = false
+# macOS Only
+# enhanced-mode-by-rule = false
+# Network Framework
+# network-framework = false
+
+# DNS相关设置
+# 传统 DNS 服务器设置
+dns-server = 119.29.29.29,223.5.5.5
+# 加密 DNS 服务器设置
+encrypted-dns-server = https://doh.pub/dns-query
+encrypted-dns-server = https://223.5.5.5/dns-query
+encrypted-dns-server = h3://223.5.5.5/dns-query
+
+# 使加密 DNS 请求通过代理策略执行
+encrypted-dns-follow-outbound-mode = false
+# 跳过证书验证
+encrypted-dns-skip-cert-verification = false
+# (macOS 版本中，如果启用了 Set as System Proxy, 这些值会被写入到系统网络代理设置.)
+# 从 /etc/hosts 中读取 DNS 记录（MAC）
+# read-etc-hosts = true
+# 对使用代理的请求强制使用本地 DNS 映射结果
+# 默认情况下，当使用代理策略时，DNS 解析永远在代理服务器进行。
+# 开启该选项后，对于存在于本地 DNS 映射中的域名，Surge 将使用本地映射结果的 IP 地址进行代理请求，而不再使用原始域名。
+# 仅对使用了 IP 地址的本地映射记录生效。
+use-local-host-item-for-proxy = true
+# 本地 DNS 映射
+# 该功能和 /etc/hosts 文件基本一致。
+# 本地 DNS 映射位于 [Host] 字段下，格式为：域名 = IP 地址
+# 除了直接指定主机名所对应的 IP 地址，还支持本地值指定域名、对特定域名自定义特定的 DNS 服务器。
+# 以下是示例：
+# 通配符
+# *.example.com = 1.1.1.1
+# 通配符支持 * 和 ?
+# 本地值指定域名
+# example.com = www.example.com
+# 这相当于 CNAME 记录。
+# 使用特定的 DNS 服务器
+# 如域名 example.com 及其子域名指定使用 DNS 服务器 119.29.29.29 来解析：
+# example.com = server:119.29.29.29
+# *.example.com = server:119.29.29.29
+# Surge 还支持配置部分域名回退到系统 DNS 解析：
+# example.com = server:syslib
+# 这可用于解决一些兼容性问题，比如一些 VPN 会利用 Split DNS 机制在系统中添加用于处理特定域名的 DNS 服务器，Surge 目前还不能支持这种复杂逻辑，可通过对 VPN 相关域名配置回退解决。
+
+# TCP Force HTTP Hosts
+# 使 Surge 将 TCP 连接视为 HTTP 请求。Surge HTTP 引擎将处理请求，并且所有高级功能都将可用，如截取、重写和脚本。
+# 支持通配符 * 及 ?；
+# 使用前缀 - 排除主机名；
+# 默认情况下，只对 80 端口的请求进行处理（使用 example.com:443 指定端口或 example.com:0 表示所有端口）；
+# <ip-address> 表示匹配所有主机名为 IP 地址的连接；
+# <ipv4-address> 表示匹配所有主机名为 IPv4 地址的连接；
+# <ipv6-address> 表示匹配所有主机名为 IPv6 地址的连接；
+# 下面是一些示例：
+# -*.apple.com：排除所有发往 *.apple.com 上的 80 端口的请求；
+# www.google.com：对 www.google.com 上的 80 端口的请求强制使用 HTTP 处理；
+# www.google.com:8080：对 www.google.com 上的 8080 端口的请求强制使用 HTTP 处理；
+# www.google.com:0：对 www.google.com 上的所有端口的请求强制使用 HTTP 处理；
+# *:0：对所有主机名上的所有端口使用强制 HTTP 处理。
+# KOOWO - 119.18.193.135, 122.14.246.33, 123.59.31.1, 175.102.178.52
+# TencentVideo/Youku/iQiyi - 116.253.24.*, 124.193.*, 124.14*, 119.79*, 175.6.26.*, 211.162.*, 220.112.* 220.169.153.*
+force-http-engine-hosts = *.ott.cibntv.net, 119.18.193.135, 122.14.246.33, 123.59.31.1, 175.102.178.52, 116.253.24.*, 124.193.*, 124.14*, 119.79*, 175.6.26.*, 211.162.*, 220.112.* 220.169.153.*
+
+# Always Real IP Hosts
+# 当 Surge VIF 处理 DNS 问题时，此选项要求 Surge 返回一个真正的 IP 地址，而不是一个 Fake IP。
 # DNS 数据包将被转发到上游 DNS 服务器。
-force-http-engine-hosts = *.ott.cibntv.net,123.59.31.1,119.18.193.135,122.14.246.33,175.102.178.52
-# > TCP Force HTTP Hosts
-# 让 Surge 把 TCP 连接当作 HTTP 请求来处理。Surge HTTP 引擎将处理这些请求，所有的高级功能，如捕获、重写和脚本等都可以使用。
-udp-policy-not-supported-behaviour = reject
-# > VIF Excluded Routes
+# 例如由于游戏主机会使用 STUN 技术进行 NAT 穿透，需要进行一些额外的配置才能正常工作。
+always-real-ip = *.lan, cable.auth.com, *.msftconnecttest.com, *.msftncsi.com, network-test.debian.org, detectportal.firefox.com, resolver1.opendns.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, stun.*, localhost.*.qq.com, *.logon.battlenet.com.cn, *.logon.battle.net, *.blzstatic.cn, music.163.com, *.music.163.com, *.126.net, musicapi.taihe.com, music.taihe.com, songsearch.kugou.com, trackercdn.kugou.com, *.kuwo.cn, api-jooxtt.sanook.com, api.joox.com, joox.com, y.qq.com, *.y.qq.com, streamoc.music.tc.qq.com, mobileoc.music.tc.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com, aqqmusic.tc.qq.com, amobile.music.tc.qq.com, *.xiami.com, *.music.migu.cn, music.migu.cn, proxy.golang.org, *.mcdn.bilivideo.cn, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, auth.wosms.cn, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, pool.ntp.org, *.pool.ntp.org, ntp.*.com, time.*.com, ntp?.*.com, time?.*.com, time.*.gov, time.*.edu.cn, *.ntp.org.cn, PDC._msDCS.*.*, DC._msDCS.*.*, GC._msDCS.*.*, speedtest.cros.wr.pvp.net
+
+# VIF Excluded Routes
 # Surge VIF 只能处理 TCP 和 UDP 协议。使用此选项可以绕过特定的 IP 范围，允许所有流量通过。
-# tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
-# > VIF Included Routes
+# ⚠️ 注意：此选项仅适用于 Surge VIF。Surge 代理服务器处理的请求不受影响。将「skip-proxy」和「tun-excluded-routes」组合起来，以确保特定的 HTTP 流量绕过 Surge。
+# 此选项可能导致系统错误 ENOMEM (无法分配内存)。这看起来像是 iOS 系统中的一个 bug。如果可能，请不要使用此选项。
+# tun-excluded-routes = 239.255.255.250/32
+
+# VIF Included Routes
 # 默认情况下，Surge VIF 接口会声明自己是默认路由。但是，由于 Wi-Fi 接口的路由较小，有些流量可能不会通过 Surge VIF 接口。使用此选项可以添加一条较小的路由。
 # tun-included-routes = 192.168.1.12/32
-# > 如果没有代理服务器支持 UDP 转发，可修改为「 direct 」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
-allow-hotspot-access = true
+# 路由防火墙
+# 包含所有的网络请求
+# include-all-networks = false
+# 包含本地网络请求
+# include-local-networks = false
+# 高级
+# 日志等级: warning, notify, info, verbose (默认值: notify)
+# ⚠️ 不建议在日常使用中启用 verbose，因为这会严重降低性能。
+loglevel = notify
+
+# 排除简单主机名
+exclude-simple-hostnames = true
+
+# 新增参数 udp-policy-not-supported-behaviour 参数用于控制当 UDP 流量被匹配到一个不支持 UDP 转发的策略时的行为
+# DIRECT：回退到 DIRECT 策略（默认）
+# REJECT：回退到 REJECT 策略
+# 如果你参与一些对战手游，建议关闭此选项。
+# udp-policy-not-supported-behaviour = REJECT
+
+# Hijack DNS
+# 默认情况下，Surge 只对发送到 Surge DNS 地址(198.18.0.2)的 DNS 查询返回 Fack IP 地址。发送到标准 DNS 的查询将被转发。
+# 如 Google 系智能硬件产品会无视 DHCP 配置强行使用 8.8.8.8 和 8.8.4.4，需要配置 Surge 强行劫持才可以正常工作。
+# 另外还可以使用 hijack-dns = *:53 来劫持所有的 DNS 查询。
+hijack-dns = 8.8.8.8:53, 1.1.1.1:53, 8.8.4.4:53
+
+# Show Reject Error Page
+# 当遇到 REJECT 策略时显示错误页
+show-error-page-for-reject = true
+
+
+# 实验性
+# 开启后 Surge 在切换网络后不再重新进行 VPN 配置。
+# 先前版本测试中使用该逻辑后部分用户会遇到问题，如产生循环请求。请自行测试是否应开启该功能
+# fast-switch = true
+
+# 开启后会提高处理 UDP 流量的优先级，当系统负载高时会有比较明显的作用 (如高性能联机游戏)
+udp-priority = true
+
 # 隐藏VPN图标
 hide-vpn-icon = true
 
@@ -129,4 +290,3 @@ falogin.cn = server:syslib // FAST Router
 [MITM]
 # 中间人攻击
 hostname = www.google.cn
-证书
