--- a/模板.conf
+++ b/模板.conf
@@ -6,7 +6,7 @@ internet-test-url = http://captive.apple.com/generate_204
 proxy-test-url = http://cp.cloudflare.com/generate_204
 
 # 测试超时（秒）:Surge 将向该 URL 发送一个 HTTP HEAD 请求。测试只关心是否收到了返回数据，并不关心数据内容。仅支持 http:// 协议
-test-timeout = 3
+test-timeout = 1
 # UDP 代理转发测试指定：默认向 8.8.8.8 查询 apple.com，可使用 proxy-test-udp 参数修改，如 proxy-test-udp = google.com@1.1.1.1
 # proxy-test-udp = google.com@1.1.1.1
 
@@ -27,7 +27,7 @@ wifi-assist = false
 # hybrid=off：即使在 All Hybrid 或 WiFi Assist 开启时，有 WiFi 就不使用数据网络；
 # 除此之外，所有 DNS 查询操作也都将并发在数据网络和 WiFi 上进行。所以若想体验该功能，请手动配置公网 DNS，暂不支持 DOH。
 # 该选项可显着改善在弱 Wi-Fi 和网络切换时的网络体验。该选项对所有 TCP 连接和 DNS 查询生效。请仅当使用不限量的数据流量套餐时开启。
-all-hybrid = true
+all-hybrid = false
 # 「Wi-Fi 助理」和「混合网络」的区别：
 # WiFi Assist：使用 WiFi 尝试建立连接后，如果一秒钟内仍未完成，则再使用数据网络尝试连接。选择最先完成的 TCP 连接；
 # Hybrid：直接并发建立两个 TCP 连接，选择最先完成的 TCP 连接.
@@ -44,9 +44,9 @@ disable-geoip-db-auto-update = false
 ipv6 = false
 # Surge VIF IPv6 Stack
 # 允许 IPv6 通过 Surge VIF。当希望 Surge 处理连接到 IPv6 地址的原始 TCP 连接时非常有用。可选项：true，false，auto，always
-ipv6-vif = auto
+ipv6-vif = false
 # ⚠️ 隐藏状态栏上的VPN图标，启动该选项可能导致「Cannot allocate memory」系统错误，请谨慎使用
-# hide-vpn-icon = true
+hide-vpn-icon = true
 
 # Wi-Fi 访问
 # Surge 可以作为 HTTP/SOCKS5 代理服务器向 Wi-Fi 网络下的其他设备提供服务器
@@ -214,9 +214,6 @@ show-error-page-for-reject = true
 
 # 开启后会提高处理 UDP 流量的优先级，当系统负载高时会有比较明显的作用 (如高性能联机游戏)
 udp-priority = true
-
-# 隐藏VPN图标
-hide-vpn-icon = true
 
 [Proxy Group]
 代理节点 = select,香港,台湾,日本,新加坡,美国,节点,DIRECT
