--- a/模板.conf
+++ b/模板.conf
@@ -68,7 +68,7 @@ allow-wifi-access = false
 # 默认仅允许外部控制器通过 USB 进行控制。如果想要允许由 Wi-Fi 控制可以将 127.0.0.1 改为 0.0.0.0
 external-controller-access = zeaphyou@127.0.0.1:6170
 http-api = zeaphyou@127.0.0.1:6171
-# 使用HTTPS替代HTTP协议，需要先配置Mitm的CA证书，同时需要在客户端设备上手动安装并信任CA证书
+# 使用HTTPS替代HTTP协议
 http-api-tls = false
 # 页面控制器：通过页面控制Surge， Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
 http-api-web-dashboard = true
