--- a/模板.conf
+++ b/模板.conf
@@ -115,7 +115,7 @@ encrypted-dns-server = h3://223.5.5.5/dns-query
 
 # 使加密 DNS 请求通过代理策略执行
 encrypted-dns-follow-outbound-mode = false
-# 跳过证书验证
+# 跳过验证
 encrypted-dns-skip-cert-verification = false
 # (macOS 版本中，如果启用了 Set as System Proxy, 这些值会被写入到系统网络代理设置.)
 # 从 /etc/hosts 中读取 DNS 记录（MAC）
